--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="app">123456</div>
+  <div id="app">123456789</div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
